[tool.poetry]
name = "parts-finder"
version = "0.1.0"
description = ""
authors = ["Bryan Overbey <bryanmorganoverbey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.32.2"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
